--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
             <!-- <h4 class="white-text">Workshop On Intelligent Machines -Moving towards era of Robotics, AI, IoT</h4>
             <p class="blue-text">Federal Institute of Science And Technology</p>
              -->
-             <img src="img/resource_person.png" />
+             <img src="img/resource_person.PNG" />
         </div>
     </div>
     
@@ -879,7 +879,7 @@
             <!-- <h4 class="white-text">Workshop On Intelligent Machines -Moving towards era of Robotics, AI, IoT</h4>
             <p class="blue-text">Federal Institute of Science And Technology</p>
              -->
-             <img src="img/volunteer.png" />
+             <img src="img/volunteer.PNG" />
         </div>
     </div>
     
