--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                             <!--Text-->
                             <p class="card-text" ><ul type="disc" style="text-align: left;">
                             <li> Best mini Project (2014)</li><br>
-                            <li> Special recognition award for technical performance from Department of CS (2015)</li><br>
+                            <li> Special recognition award for technical performance from Department of Computer Science & Engineering (2015)</li><br>
                             <li> Recognition from college management & PTA, for the work carried out during 35th National Games, by implementing Third eye technology for Judo Games (2015)</li><br>
 
 
