--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .carousel-item:nth-child(1) {
-            background-image: url("img/img (54).jpg");
+            background-image: url("img/bg.png");
             background-repeat: no-repeat;
             background-size: cover;
         }
