--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <a class="nav-link" href="#skills"> SKILLS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#courses"> COURSRS</a>
+                        <a class="nav-link" href="#courses"> COURSE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#rp"> RESOURCE PERSON</a>
