--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -93,7 +93,7 @@
                         <a class="nav-link" href="index.html#skills"> SKILLS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#courses"> COURSRS</a>
+                        <a class="nav-link" href="index.html#courses"> COURSE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#rp"> RESOURCE PERSON</a>
