--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
                 margin-bottom: 1.5rem;
             }
         }
+        /* custom style */
+          .citylights {
+    color: #fff;
+    text-shadow: rgb(184, 0, 245) 0px 0px 10px;
+    font-size: 24pt;
+    
+}
+ .citylights1 {
+    color: #fff;
+   text-shadow: rgb(184, 0, 245) 2px 3px 10px;
+}
     </style>
 
 </head>
@@ -181,9 +192,9 @@
                         <ul class="animated fadeInUp col-md-12">
                         
                             <li>
-                                <h1 class="h1-responsive flex-item">Vishnumohan K</h1>
+                                <h1 class="h1-responsive flex-item citylights">Vishnumohan K</h1>
                                 <li>
-                                    <p class="flex-item">Junior Web Developer | Online Media Space</p>
+                                    <p class="flex-item citylights1">Junior Web Developer | Online Media Space</p>
                                 </li>
                                <!--  <li>
                                     <a target="_blank" href="http://mdbootstrap.com/getting-started/" class="btn btn-primary btn-lg flex-item">Sign up!</a>
