--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <li>
                                 <h1 class="h1-responsive flex-item citylights">Vishnumohan K</h1>
                                 <li>
-                                    <p class="flex-item citylights1">Junior Web Developer | Online Media Space</p>
+                                    <p class="flex-item citylights1"><br>Junior Web Developer | Online Media Space</p>
                                 </li>
                                <!--  <li>
                                     <a target="_blank" href="http://mdbootstrap.com/getting-started/" class="btn btn-primary btn-lg flex-item">Sign up!</a>
